Navbar z-index issue resolved

--- a/src/styles/default/componentstyles/dropdown.scss
+++ b/src/styles/default/componentstyles/dropdown.scss
@@ -12,7 +12,7 @@
   position: absolute;
   width: 100%;
   max-height: 200px;
-  //background-color: $componentBGColor;
+  background-color: $componentBGColor;
   opacity: 1.01;
   box-shadow: 0 1px 3px 0 $borderColor;
 }
